final prepare for review

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
+addopts = --reruns 2
 markers =
     smoke: marker for smoke tests
     regression: marker for regression tests
+	need_review: marker for review
